--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,8 @@
 
 [context.deploy-preview]
   command = "yarn build:preview"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Basic-Auth: test:test
